--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,14 +6,14 @@ on:
       - master
       - /^release-.*$/
       - /^test-.*$/
-      - gh2021
+      - gh-pre-release
       - gh-master
   pull_request:
     branches:
       - master
       - /^release-.*$/
       - /^test-.*$/
-      - gh2021
+      - gh-pre-release
       - gh-master
 
 jobs:
@@ -23,6 +23,7 @@ jobs:
       TRAVIS_DIR: assembly/travis
       STATIC_DIR: assembly/static
       COMMIT_ID: e65641517361d7da7ef1801489c15e3af7863a39
+      BRANCH_ID: gh-master
       DB_USER: root
       DB_PASS: root
       DB_DATABASE: load_test
@@ -55,7 +56,7 @@ jobs:
           $TRAVIS_DIR/install-hadoop.sh
           sudo /etc/init.d/mysql start
           mysql -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -u${{ env.DB_USER }} -p${{ env.DB_PASS }}
-          $TRAVIS_DIR/install-hugegraph-from-source.sh $COMMIT_ID | grep -v "Downloading\|Downloaded"
+          $TRAVIS_DIR/install-hugegraph-from-source.sh $BRANCH_ID | grep -v "Downloading\|Downloaded"
 
       - name: Run test
         run: |
