--- a/pom.xml
+++ b/pom.xml
@@ -294,6 +294,10 @@
                     <groupId>org.apache.thrift</groupId>
                     <artifactId>libfb303</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.apache.orc</groupId>
+                    <artifactId>orc-core</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
