--- a/pom.xml
+++ b/pom.xml
@@ -298,6 +298,11 @@
                     <groupId>org.apache.orc</groupId>
                     <artifactId>orc-core</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.apache.hive</groupId>
+                    <artifactId>hive-common</artifactId>
+                </exclusion>
+
             </exclusions>
         </dependency>
         <dependency>
@@ -384,6 +389,14 @@
                 <exclusion>
                     <groupId>org.apache.thrift</groupId>
                     <artifactId>libfb303</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.orc</groupId>
+                    <artifactId>orc-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.hive</groupId>
+                    <artifactId>hive-common</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
