--- a/pom.xml
+++ b/pom.xml
@@ -311,7 +311,7 @@
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-jdbc</artifactId>
-            <version>2.3.9</version>
+            <version>3.1.2</version>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
@@ -403,6 +403,11 @@
                 </exclusion>
 
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-client</artifactId>
+            <version>3.3.0</version>
         </dependency>
     </dependencies>
 
