--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       TRAVIS_DIR: assembly/travis
       STATIC_DIR: assembly/static
       COMMIT_ID: e65641517361d7da7ef1801489c15e3af7863a39
-      BRANCH_ID: gh-master
+      BRANCH_ID: gh-pre-release
       DB_USER: root
       DB_PASS: root
       DB_DATABASE: load_test
